# tidal-rs

./: .gitignore  Cargo.toml
exemples/tidal_rs_test/: Cargo.toml
exemples/tidal_rs_test/src/: main.rs
src/: auth.rs  client.rs  error.rs  lib.rs  media.rs  model.rs  parsing.rs  search.rs  user.rs
